src/human_study/program_3/python_err_msg.txt
File "./seq2parse/human_study/program_3/original.py", line 5
    if num_1 in range(minimum_num, maximum_num):
                                               ^
SyntaxError: invalid syntax
